Bug 32619 - [r600g] EE src/gallium/drivers/r600/r600_shader.c/r600_shader_from_tgsi:593 - unsupported token type 3
Summary: [r600g] EE src/gallium/drivers/r600/r600_shader.c/r600_shader_from_tgsi:593 -...
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-23 17:13 UTC by Vinson Lee
Modified: 2010-12-24 16:57 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2010-12-23 17:13:14 UTC
mesa: 38eff56f7eb6c64b153d612ea6ae31bd78149a41 (master)

chipset: RV620
system architecture: i686
libdrm-dev: 2.14.21-1ubuntu2.1
kernel version: 2.6.35-24-generic
Linux distribution: Ubuntu 10.10 i386

Many piglit tests are now failing with one the following errors messages.
EE src/gallium/drivers/r600/r600_shader.c/r600_shader_from_tgsi:593 - unsupported token type 3
EE src/gallium/drivers/r600/r600_shader.c/r600_pipe_shader_create:239 - translation from TGSI failed 
EE src/gallium/drivers/r600/r600_state.c/r600_draw_common:229 - missing vertex shader


07498075b5de14955958da44a90eb7ee203218a1 is the first bad commit
commit 07498075b5de14955958da44a90eb7ee203218a1
Author: Dave Airlie <airlied@redhat.com>
Date:   Sat Dec 18 10:36:55 2010 +1000

    mesa/st: set the color write cbuf property for fragColor writes

:040000 040000 c9f116d1716b9538f29e59f6d6495865a23c0c55 d11a15b189a4517423d87baefc0c06e4ed0f91bd M	src
bisect run success
Comment 1 Dave Airlie 2010-12-23 23:41:54 UTC
should be worked around now:

http://cgit.freedesktop.org/mesa/mesa/commit/?id=876effb0e717e8e64050662f6ffa286c22065f5c
Comment 2 Vinson Lee 2010-12-24 16:57:04 UTC
mesa: 65e8f8111094a0acbdf5d0a400967a43b5da2996 (master)

Verified fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.